fix(tables): wrap in figure.table-container, not div.table-scroll (#7585)
* refactor(tables): rename table-{wrap => container}

* fix(tables): wrap in figure, not div

Avoids them being ignored by Firefox Reader Mode.

--- a/client/src/document/ingredients/browser-compatibility-table/index-desktop-md.scss
+++ b/client/src/document/ingredients/browser-compatibility-table/index-desktop-md.scss
@@ -1,5 +1,5 @@
 @media screen and (min-width: $screen-md) {
-  .table-scroll {
+  .table-container {
     width: calc(100% + 6rem);
   }
 
